fix: adicionando validações e variavies de mensagens.

--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -1,1 +1,7 @@
-string_mysql='root:ti@tcp(localhost:3306)/usuarios?parseTime=true'
+API_PORT=8080
+
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_SENHA=
+MYSQL_PORT=3306
+MYSQL_DATABASE=usuario
