--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -1,7 +1,7 @@
 API_PORT=8080
 
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_SENHA=
-MYSQL_PORT=3306
-MYSQL_DATABASE=usuarios
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_SENHA=root
+POSTGRES_PORT=5433
+POSTGRES_DATABASE=usuarios
