feat: adicionando docker ao projeto exemplo.

--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -1,7 +1,7 @@
 API_PORT=8080
 
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_SENHA=
+MYSQL_HOST=mysql
+MYSQL_USER=golang
+MYSQL_SENHA=golang
 MYSQL_PORT=3306
-MYSQL_DATABASE=usuarios
+MYSQL_DATABASE=golang
