feat: adicionando docker ao projeto exemplo.

--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -1,7 +1,7 @@
 API_PORT=8080
 
-POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
-POSTGRES_SENHA=root
-POSTGRES_PORT=5433
-POSTGRES_DATABASE=usuarios
+POSTGRES_HOST=postgres
+POSTGRES_USER=golang
+POSTGRES_SENHA=golang
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=golang
